--- a/web/src/styles/globals.css
+++ b/web/src/styles/globals.css
@@ -17,21 +17,42 @@
   --font-mono: var(--font-geist-mono);
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: "Lato", sans-serif;
-  padding-top: 29px; /* Space for Header (change value if Header height changes) */
-}
+
 
 h1, h2, h3, h4, h5, h6 {
   color: var(--color-brandGold);
 }
 
-.container-custom {
-  @apply mx-auto px-4;
+
+/* header */
+.header-bg {
+  @apply w-full bg-accentGray;
 }
 
+.container-header {
+  @apply mx-auto px-15; 
+}
+
+
+/* body */
+body {
+  background: var(--background);
+  color: var(--foreground);
+  font-family: "Lato", sans-serif;
+  margin: 0;
+}
+
+.container-body {
+  @apply max-w-7xl mx-auto px-4;
+}
+
+.container-hero {
+  @apply relative w-full;
+  height: 55vh; 
+}
+
+
+/* footer */
 .container-footer {
   @apply max-w-7xl mx-auto px-4;
 }
